[tool.poetry]
name = "repo-po0licy-compliance"
version = "0.1.0"
description = "Checks GitHub repository settings for compliance with policy"
authors = ["Canonical IS DevOps <launchpad.net/~canonical-is-devops>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "repo_policy_compliance"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10.0"
pygithub = "^1.58"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
line_length = 99
profile = "black"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
enable = ["useless-suppression"]
disable = ["wrong-import-position"]